Fix loadFile, Setninger and whitespace
- Setninger is full working
- loadFile has now optional argument noPlay
- loadFile is triggered by first click on document

--- a/sass/las-partials/_wyzwanie.scss
+++ b/sass/las-partials/_wyzwanie.scss
@@ -318,6 +318,7 @@
   text-align: center;
   user-select: none;
 }
+
 .setninger:before {
   content:  '';
 
@@ -326,6 +327,7 @@
 
   vertical-align: middle;
 }
+
 .setninger-words {
   position: relative;
 
@@ -339,25 +341,26 @@
   position: relative;
   z-index: 100;
 
+
   display: inline-block;
+  opacity: 0;
   padding: $space-half;
   margin: 0;
-
-  opacity: 0;
 
   cursor:move;
   user-select: none;
   transition: none;
 }
 
+
 .setninger-words__word-wrap:active,
 .setninger-words__word-wrap:focus {
-  opacity: 1;
+
 }
 
 .setninger-words__word {
 
-  padding: $space-half $space-2;
+  padding: $space $space;
   margin: 0;
   border-radius: 3px;
   overflow: hidden;
@@ -368,22 +371,41 @@
   font-size: $size-1;
   line-height: 1;
   text-decoration: none;
-  text-transform: none;
   text-align: center;
   white-space: nowrap;
+}
 
-  transition: none;
+.setninger-words__word-wrap--chosen .setninger-words__word {
+  background-color: $green-hover;
+  opacity: 1;
+  @include shadow-2;
+}
+
+.setninger-words__word-wrap--ghost .setninger-words__word {
+  color: transparent;
+  opacity: 0.75;
+  box-shadow: none;
+}
+
+//  when the sentence is correct
+.setninger-words--composed .setninger-words__word-wrap {
+  //padding: 0;
+}
+.setninger-words--composed .setninger-words__word-wrap:first-child {
+  text-transform: capitalize;
+}
+.setninger-words--composed .setninger-words__word {
+  background-color: $dark-btn;
 }
 
 
-.setninger-words__word--active {
-  opacity: 0.5;
-}
 
 .setninger-words-b {
   position: absolute;
 
   width: 100%;
+
+  transform: scaleY(0);
 
   background-color: rgba( $white, 0.1 );
 }
@@ -406,11 +428,37 @@
   font-size: $size-1;
 }
 
-.setninger-controls {
+.setninger-controls {}
+
+.setninger-controls__next,
+.setninger-controls__trans {
   position: absolute;
-  bottom: 10%;
-  left: 10%;
+  left: 50%;
+
+
+  display: none;
+  opacity: 0;
+  width: 4rem;
+  height: 4rem;
+  padding: 0;
+  border: 0;
+  border-radius: 50%;
+
+  background-color: $white;
+  background-size: 26px auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  @include shadow-3;
+  cursor: pointer;
+
+  transform: translateX(-50%);
 }
 
-
-
+.setninger-controls__next {
+  bottom: $space-8;
+  background-image: url(/las/c/i/icon_next.png);
+}
+.setninger-controls__trans {
+  bottom: $space-4;
+  background-image: url(/las/c/i/icon_more.png);
+}
